<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/screen_login_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="false"
    android:background="@drawable/login_background">

    <FrameLayout
        android:id="@+id/screen_login_outer_frame_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/screen_login_main_views_relative_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/screen_login_logo_img"
                android:layout_width="140dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/login_logo" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/screen_login_username_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/screen_login_logo_img"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="left|center_vertical"
                app:hintAnimationEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/screen_login_username_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="left|center_vertical"
                    android:hint="@string/screen_login_username_hint"
                    android:inputType="textEmailAddress"
                    android:lines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_01"
                    app:backgroundTint="@color/white" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/screen_login_password_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/screen_login_username_edit_text_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:gravity="left|center_vertical"
                app:errorTextAppearance="@style/DriverAppPasswordError"
                app:hintAnimationEnabled="true"
                app:hintTextAppearance="@style/DriverAppPasswordHint"
                app:passwordToggleContentDescription="@string/screen_login_password_hint"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/white">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/screen_login_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="left|center_vertical"
                    android:hint="@string/screen_login_password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:singleLine="true"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_01"
                    app:backgroundTint="@color/white" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/screen_login_sign_in_button"
                android:layout_width="140dp"
                android:layout_height="45dp"
                android:layout_below="@+id/screen_login_password_edit_text_layout"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:background="@android:color/holo_blue_dark"
                android:fontFamily="@string/font_family_sans_serif_condensed"
                android:onClick="onClick"
                android:text="@string/screen_login_sign_in"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_05"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/screen_login_forgot_password_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/screen_login_sign_in_button"
                android:layout_centerHorizontal="true"
                android:fontFamily="@string/font_family_sans_serif_thin"
                android:gravity="top|center_horizontal"
                android:onClick="onClick"
                android:text="@string/screen_login_forgot_password"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_00"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/screen_login_create_account_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/screen_login_forgot_password_text_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:onClick="onClick"
                android:text="@string/screen_login_create_account"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_03" />

            <Button
                android:id="@+id/screen_login_become_a_driver_button"
                android:layout_width="240dp"
                android:layout_height="64dp"
                android:layout_below="@+id/screen_login_create_account_text_view"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="2dp"
                android:background="@drawable/login_big_dark_blue_btn"
                android:fontFamily="@string/font_family_sans_serif_condensed"
                android:gravity="center"
                android:onClick="onClick"
                android:text="@string/screen_login_become_a_driver"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_04"
                android:textStyle="bold" />


        </RelativeLayout>

        <ProgressBar
            android:id="@+id/screen_login_main_progress_view"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_gravity="top|right"
            android:layout_margin="16dp"
            android:visibility="invisible" />

    </FrameLayout>
</ScrollView>